Update bibliography: - Keys added for software references (authors mostly missing) - Added reference from Ilmar

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -37,7 +37,7 @@
   timestamp = {2009.06.07}
 }
 
-@BOOK{vSol'inSegethEtAl2004,
+@BOOK{SolinSegethEtAl2004,
   title = {Higher-order finite element methods},
   publisher = {Chapman \& Hall/CRC, Boca Raton, FL},
   year = {2004},
@@ -237,7 +237,7 @@
   timestamp = {2009.06.07}
 }
 
-@ARTICLE{AlnaesLoggEtAl2009a,
+@ARTICLE{AlnaesLoggEtAl2009b,
   author = {M. S. Aln\ae{}s and A. Logg and K.-A. Mardal and O. Skavhaug and
 	H. P. Langtangen},
   title = {{U}nified {F}ramework for {F}inite {E}lement {A}ssembly},
@@ -259,7 +259,7 @@
   timestamp = {2009.06.06}
 }
 
-@MANUAL{AlnaesMardal2009b,
+@MANUAL{AlnaesMardal2009c,
   title = {{SyFi} User Manual},
   author = {M. S. Aln\ae{}s and K.-A. Mardal},
   year = {2009},
@@ -282,7 +282,16 @@
   timestamp = {2009.06.06}
 }
 
-@ARTICLE{AlnaesMardal2009,
+@MANUAL{AlnaesMardal2009a,
+  title = {{SyFi}},
+  author = {Aln{\ae}s, M. S. and K.-A. Mardal},
+  year = {2009},
+  note = {\url{http://www.fenics.org/wiki/SyFi/}},
+  owner = {logg},
+  timestamp = {2009.06.06}
+}
+
+@ARTICLE{AlnaesMardal2009b,
   author = {Aln{\ae}s, Martin Sandve and Mardal, Kent-Andre},
   title = {On the Efficiency of Symbolic Computations Combined with Code Generation
 	for Finite Element Methods},
@@ -300,15 +309,6 @@
 	where we demonstrate orders of magnitude in speed-up.},
   owner = {logg},
   timestamp = {2009.06.07}
-}
-
-@MANUAL{AlnaesMardal2009a,
-  title = {{SyFi}},
-  author = {Aln{\ae}s, M. S. and K.-A. Mardal},
-  year = {2009},
-  note = {\url{http://www.fenics.org/wiki/SyFi/}},
-  owner = {logg},
-  timestamp = {2009.06.06}
 }
 
 @ARTICLE{AlnaesMardal2008,
@@ -354,6 +354,18 @@
   timestamp = {2009.06.07},
   totalpages = {330},
   url = {http://simula.no/research/scientific/publications/Simula.SC.22/downloadPdfFile}
+}
+
+@ARTICLE{Alperin2006,
+  author = {Alperin, N. and Mazda, M. and Lichtor, T. and Lee, S. H.},
+  title = {From cerebrospinal fluid pulsation to noninvasive intracranial compliance
+	and pressure measured by MRI flow studies},
+  journal = {Current Medical Imaging Reviews},
+  year = {2006},
+  volume = {2},
+  pages = {117-129},
+  owner = {kent-and},
+  timestamp = {2009.06.08}
 }
 
 @ARTICLE{American2003,
@@ -415,6 +427,21 @@
   volume = {15},
   pages = {1--155},
   publisher = {Cambridge Univ Press}
+}
+
+@ARTICLE{Arnold2008,
+  author = {D. N. Arnold and G. Awanou and R. Winther},
+  title = {Finite elements for symmetric tensors in three dimensions},
+  journal = {Math. Comp.},
+  year = {2008},
+  volume = {77},
+  pages = {1229--1251},
+  number = {263},
+  coden = {MCMPAF},
+  fjournal = {Mathematics of Computation},
+  issn = {0025-5718},
+  owner = {kent-and},
+  timestamp = {2009.06.08}
 }
 
 @ARTICLE{ArnoldBrezzi1985,
@@ -482,6 +509,19 @@
   mrnumber = {MR2336264 (2008k:74057)},
   owner = {logg},
   timestamp = {2009.06.06}
+}
+
+@ARTICLE{Arnold2006,
+  author = {D. N. Arnold and R. S. Falk and R. Winther},
+  title = {Finite element exterior calculus, homological techniques, and applications},
+  journal = {Acta Numer.},
+  year = {2006},
+  volume = {15},
+  pages = {1--155},
+  fjournal = {Acta Numerica},
+  issn = {0962-4929},
+  owner = {kent-and},
+  timestamp = {2009.06.08}
 }
 
 @INCOLLECTION{ArnoldFalkEtAl2006a,
@@ -1197,7 +1237,7 @@
   timestamp = {2009.05.27}
 }
 
-@ARTICLE{BrambleZl'amal1970,
+@ARTICLE{BrambleZlamal1970,
   author = {Bramble, J.H. and Zl{\'a}mal, M.},
   title = {{Triangular elements in the finite element method}},
   journal = {Mathematics of Computation},
@@ -1311,6 +1351,15 @@
   timestamp = {2009.06.06}
 }
 
+@BOOK{Brezzi1991,
+  title = {Mixed and hybrid finite element methods},
+  publisher = {Springer-Verlag},
+  year = {1991},
+  author = { F. Brezzi and M. Fortin},
+  owner = {kent-and},
+  timestamp = {2009.06.08}
+}
+
 @BOOK{BrezziFortin1991,
   title = {Mixed and hybrid finite element methods},
   publisher = {Springer-Verlag},
@@ -1400,9 +1449,8 @@
 	a time step. The effectiveness of the algorithm is demonstrated on
 	the problem of vortex shedding from a circular cylinder at a Reynolds
 	number of 100.},
-  file = {Broo_1982_199.pdf:Broo_1982_199.pdf:PDF},
+  file = {Broo_1982_199.pdf:Broo_1982_199.pdf:PDF;Broo_1982_199.pdf:Broo_1982_199.pdf:PDF},
   owner = {logg},
-  pdf = {Broo_1982_199.pdf},
   timestamp = {2008.05.27},
   url = {http://www.sciencedirect.com/science/article/B6V29-47X87NJ-FY/1/8827072c772132351eb1a8cd3c15c8fc}
 }
@@ -1754,6 +1802,15 @@
   timestamp = {2009.06.06}
 }
 
+@MISC{Certik2009,
+  author = {O.~Certik and F.~Seoane and P.~Peterson and others},
+  title = {{sympy}: {Python} library for symbolic mathematics},
+  year = {2009},
+  note = {URL: \url{http://sympy.org}},
+  owner = {kent-and},
+  timestamp = {2009.06.08}
+}
+
 @INCOLLECTION{ChaiGaoEtAl2007,
   author = {L. Chai and Q. Gao and D. K. Panda},
   title = {Understanding the Impact of Multi-Core Architecture in Cluster Computing:
@@ -1836,6 +1893,15 @@
   mrnumber = {MR1930132},
   owner = {logg},
   timestamp = {2009.06.06}
+}
+
+@BOOK{Ciarlet2002a,
+  title = {The Finite Element Method for Elliptic Problems},
+  publisher = {SIAM},
+  year = {2002},
+  author = {P. G. Ciarlet},
+  owner = {kent-and},
+  timestamp = {2009.06.08}
 }
 
 @BOOK{Ciarlet1978,
@@ -2070,7 +2136,7 @@
   timestamp = {2009.05.06}
 }
 
-@ARTICLE{Dom'inguezSayas2008,
+@ARTICLE{DominguezSayas2008,
   author = {V\'{i}ctor Dom\'{i}nguez and Francisco-Javier Sayas},
   title = {Algorithm 884: A Simple {Matlab} Implementation of the {Argyris}
 	Element},
@@ -2266,6 +2332,18 @@
   mrnumber = {MR2292682 (2007k:76089)},
   owner = {logg},
   timestamp = {2009.06.07}
+}
+
+@ARTICLE{Enzmann1991,
+  author = {Enzmann, D. and Pelc, N. J.},
+  title = {Normal Flow Patterns of Intracranial and Spinal Cerebrospinal Fluid
+	Defined with Phase-Contrast Cine MR Imaging},
+  journal = {Radiology},
+  year = {1991},
+  volume = {178},
+  pages = {467-474},
+  owner = {kent-and},
+  timestamp = {2009.06.08}
 }
 
 @BOOK{ErikssonEstepEtAl1996,
@@ -2566,10 +2644,9 @@
   pages = {632--641},
   address = {London, UK},
   publisher = {Springer-Verlag},
-  file = {Falg_2002_632_inproc.pdf:Falg_2002_632_inproc.pdf:PDF},
+  file = {Falg_2002_632_inproc.pdf:Falg_2002_632_inproc.pdf:PDF;Falg_2002_632_inproc.pdf:Falg_2002_632_inproc.pdf:PDF},
   isbn = {3-540-43594-8},
   owner = {logg},
-  pdf = {Falg_2002_632_inproc.pdf},
   timestamp = {2008.09.19}
 }
 
@@ -2671,7 +2748,7 @@
 	on couplons in a variety of skeletal and cardiac muscles, which is
 	useful in modeling calcium release events, both macroscopic and microscopic
 	("sparks").},
-  file = {Fran_1999_1528.pdf:Fran_1999_1528.pdf:PDF},
+  file = {Fran_1999_1528.pdf:Fran_1999_1528.pdf:PDF;Fran_1999_1528.pdf:Fran_1999_1528.pdf:PDF},
   key = {137},
   keywords = {Animals, Calcium, Calcium Channels, Cell Membrane, Chickens, Dogs,
 	Electron, Fishes, Freeze Fracturing, Guinea Pigs, Heart, In Vitro,
@@ -2679,7 +2756,6 @@
 	Research Support, Ryanodine Receptor Calcium Release Channel, Sarcoplasmic
 	Reticulum, Skeletal, U.S. Gov't, 10465763},
   owner = {logg},
-  pdf = {Fran_1999_1528.pdf},
   pmid = {10465763},
   timestamp = {2009.06.07},
   url = {http://www.biophysj.org/cgi/content/full/77/3/1528}
@@ -2763,6 +2839,14 @@
   timestamp = {2009.06.06}
 }
 
+@MISC{Geuzaine,
+  author = {Geuzaine, C. and Remacle, J.-F.},
+  title = {GMSH - a 3D mesh generator},
+  location = {http://www.geuz.org/gmsh/},
+  owner = {kent-and},
+  timestamp = {2009.06.08}
+}
+
 @ARTICLE{GieringKaminski1998,
   author = {Ralf Giering and Thomas Kaminski},
   title = {Recipes for adjoint code construction},
@@ -2805,12 +2889,26 @@
   volume = {81},
   pages = {2340-2361},
   number = {25},
-  file = {Gill_1977_2340.pdf:Gill_1977_2340.pdf:PDF},
+  file = {Gill_1977_2340.pdf:Gill_1977_2340.pdf:PDF;Gill_1977_2340.pdf:Gill_1977_2340.pdf:PDF},
   issn = {0022-3654},
   owner = {logg},
-  pdf = {Gill_1977_2340.pdf},
   timestamp = {2008.09.17},
   url = {http://pubs3.acs.org/acs/journals/doilookup?in_doi=10.1021/j100540a008}
+}
+
+@BOOK{Girault1986,
+  title = {Finite element methods for {N}avier-{S}tokes equations},
+  publisher = {Springer-Verlag},
+  year = {1986},
+  author = {V. Girault and P.-A. Raviart},
+  volume = {5},
+  pages = {x+374},
+  series = {Springer Series in Computational Mathematics},
+  address = {Berlin},
+  note = {Theory and algorithms},
+  isbn = {3-540-15796-4},
+  owner = {kent-and},
+  timestamp = {2009.06.08}
 }
 
 @BOOK{Golub1996,
@@ -2848,9 +2946,8 @@
   pages = {441--501},
   number = {3},
   month = {Dec},
-  file = {Grah_1947_441.pdf:Grah_1947_441.pdf:PDF},
+  file = {Grah_1947_441.pdf:Grah_1947_441.pdf:PDF;Grah_1947_441.pdf:Grah_1947_441.pdf:PDF},
   owner = {logg},
-  pdf = {Grah_1947_441.pdf},
   pmid = {18895519},
   timestamp = {2009.02.13}
 }
@@ -2917,6 +3014,18 @@
   url = {http://www.biophysj.org/cgi/content/full/83/6/2918}
 }
 
+@ARTICLE{Greitz1999,
+  author = {Greitz, D. and Ericson, K. and Flodmark O.},
+  title = {Pathogenesis and Mechanics of Spinal Cord Cysts},
+  journal = {Int. J. Neuroradiol.},
+  year = {1999},
+  volume = {5},
+  pages = {61-78},
+  number = {2},
+  owner = {kent-and},
+  timestamp = {2009.06.08}
+}
+
 @ARTICLE{Griewank1989,
   author = {Andreas Griewank},
   title = {On Automatic Differentiation},
@@ -2970,7 +3079,7 @@
 	This study leads to future work on the molecular basis of E-C coupling
 	with a physiological concentration of Ca ions permeating the Ca channel.},
   doi = {10.1016/S0006-3495(01)76242-X},
-  file = {Guia_2001_2742.pdf:Guia_2001_2742.pdf:PDF},
+  file = {Guia_2001_2742.pdf:Guia_2001_2742.pdf:PDF;Guia_2001_2742.pdf:Guia_2001_2742.pdf:PDF},
   institution = {Laboratory of Cardiovascular Sciences, Gerontology Research Center,
 	National Institute on Aging, National Institutes of Health, Baltimore,
 	Maryland 21224, USA.},
@@ -2981,11 +3090,22 @@
 	drug effects; Male; Membrane Potentials, drug effects; Myocardium,
 	cytology/metabolism; Patch-Clamp Techniques; Rats; Rats, Sprague-Dawley},
   owner = {logg},
-  pdf = {Guia_2001_2742.pdf},
   pii = {S0006-3495(01)76242-X},
   pmid = {11371449},
   timestamp = {2009.03.06},
   url = {http://dx.doi.org/10.1016/S0006-3495(01)76242-X}
+}
+
+@ARTICLE{Gupta2009,
+  author = {Gupta, S. and Soellinger, M. and Boesiger, P. and Pulikako, D. and
+	Kurtcuoglu, V.},
+  title = {Three-Dimensional computational modeling of subject -specific cerebrospinal
+	fluid flow in the subarachnoid space},
+  journal = {J. Biomech. Eng.},
+  year = {2009},
+  volume = {131},
+  owner = {kent-and},
+  timestamp = {2009.06.08}
 }
 
 @ARTICLE{GustafssonLundhEtAl1988,
@@ -3239,12 +3359,39 @@
   timestamp = {2009.06.06}
 }
 
+@ARTICLE{Haughton2003,
+  author = {Haughton, V. and Korosec, F. R. and Medow, J. E. and Dolar, M. T.
+	and Iskandar, B. J.},
+  title = {Peak systolic and diastolic {CSF} velocity in the foramen magnum
+	in adult patients with {C}hiari {I} malformations and in normal control
+	participants},
+  journal = {Am. J. Neuroradiol.},
+  year = {2003},
+  volume = {24},
+  pages = {169-176},
+  owner = {kent-and},
+  timestamp = {2009.06.08}
+}
+
 @MANUAL{HechtPironneauEtAl2005,
   title = {Free{FEM}++ manual},
   author = {F. Hecht and O. Pironneau and A. Le Hyaric and K. Ohtsuka},
   year = {2005},
   owner = {logg},
   timestamp = {2009.06.06}
+}
+
+@ARTICLE{Heiss1999,
+  author = {Heiss, J. D. and Patronas, N. and DeVroom, H. L. and Shawker, T.
+	and Ennis, R. and Kammerer, W. and Eidsath, A. and Talbot, T. and
+	Morris, J. and Eskioglu, E. and Oldfield, E. H.},
+  title = {Elucidating the pathophysiology of syringomyelia},
+  journal = {J. Neurosurg.},
+  year = {1999},
+  volume = {91},
+  pages = {532-562},
+  owner = {kent-and},
+  timestamp = {2009.06.08}
 }
 
 @ARTICLE{HerouxBartlettEtAl2005,
@@ -3433,6 +3580,18 @@
   timestamp = {2009.06.06}
 }
 
+@ARTICLE{Hofmann2000,
+  author = {Hofmann, E. and Warmuth-Metz, M. and Bendszus, M. and Solymosi, L.},
+  title = {Phase-contrast {MR} imaging of the cervical {CSF} and spinal cord:
+	volumetric motion analysis in patients with {C}hiari I malformation},
+  journal = {AJNR Am J Neuroradiol},
+  year = {2000},
+  volume = {21},
+  pages = {151--158},
+  owner = {kent-and},
+  timestamp = {2009.06.08}
+}
+
 @TECHREPORT{HuBlake1995,
   author = {Y. Hu and R. Blake},
   title = {An optimal dynamic load balancing algorithm},
@@ -3521,6 +3680,17 @@
   number = {118},
   owner = {logg},
   timestamp = {2009.06.06}
+}
+
+@INPROCEEDINGS{WilbersLangtangenEtAl2009,
+  author = {{I.~M.~Wilbers and H.~P.~Langtangen and \AA.~\O deg\aa rd}},
+  title = {{U}sing {C}ython to {S}peed up {N}umerical {P}ython {P}rograms},
+  booktitle = {MekIT'09, Fifth national conference on Computational Mechanics},
+  year = {2009},
+  editor = {B.~Skallerud and H.~I.~Andersson},
+  publisher = {Tapir Academic Press},
+  owner = {kent-and},
+  timestamp = {2009.06.08}
 }
 
 @ARTICLE{ImhofSharma2007,
@@ -3905,6 +4075,18 @@
 }
 
 @ARTICLE{Kirby2006c,
+  author = {R. C. Kirby},
+  title = {Optimizing FIAT with level 3 BLAS},
+  journal = {ACM Trans. Math. Software},
+  year = {2006},
+  volume = {32},
+  pages = {223--235},
+  number = {2},
+  owner = {kent-and},
+  timestamp = {2009.06.08}
+}
+
+@ARTICLE{Kirby2006d,
   author = {Robert C. Kirby},
   title = {Optimizing {FIAT} with level 3 {BLAS}},
   journal = {{ACM} Trans. Math. Softw.},
@@ -3942,22 +4124,16 @@
 }
 
 @ARTICLE{Kirby2004a,
-  author = {Kirby, Robert C.},
-  title = {Algorithm 839: {FIAT}, a new paradigm for computing finite element
+  author = {R. C. Kirby},
+  title = {Algorithm 839: FIAT, a new paradigm for computing finite element
 	basis functions},
   journal = {ACM Trans. Math. Software},
   year = {2004},
   volume = {30},
   pages = {502--516},
   number = {4},
-  coden = {ACMSCU},
-  fjournal = {Association for Computing Machinery. Transactions on Mathematical
-	Software},
-  issn = {0098-3500},
-  mrclass = {65N30},
-  mrnumber = {MR2124442},
-  owner = {logg},
-  timestamp = {2009.06.07}
+  owner = {kent-and},
+  timestamp = {2009.06.08}
 }
 
 @ARTICLE{Kirby2003,
@@ -5120,6 +5296,20 @@
   timestamp = {2009.06.06}
 }
 
+@OTHER{Logg2004e,
+  author = {Anders Logg},
+  category = {theses},
+  duplicate = {True},
+  owner = {logg},
+  school = {Chalmers University of Technology},
+  simula = {ok},
+  status = {published},
+  thesistype = {phd},
+  timestamp = {2009.06.06},
+  title = {Automation of Computational Mathematical Modeling},
+  year = {2004}
+}
+
 @PHDTHESIS{Logg2004f,
   author = {A. Logg},
   title = {Automation of Computational Mathematical Modeling},
@@ -5224,6 +5414,20 @@
   timestamp = {2009.06.06}
 }
 
+@OTHER{Logg2001c,
+  author = {Anders Logg},
+  category = {theses},
+  duplicate = {True},
+  owner = {logg},
+  school = {Chalmers University of Technology},
+  simula = {ok},
+  status = {published},
+  thesistype = {lic},
+  timestamp = {2009.06.06},
+  title = {Multi-Adaptive {G}alerkin Methods for {ODE}s},
+  year = {2001}
+}
+
 @TECHREPORT{Logg2000,
   author = {A. Logg},
   title = {A Multi-Adaptive {ODE}-Solver},
@@ -5267,6 +5471,29 @@
   timestamp = {2009.06.06}
 }
 
+@OTHER{Logg1998d,
+  author = {A. Logg},
+  owner = {logg},
+  school = {Chalmers University of Technology, Sweden},
+  timestamp = {2009.06.06},
+  title = {A Multi-Adaptive {ODE}-Solver},
+  year = {1998}
+}
+
+@OTHER{Logg1998e,
+  author = {Anders Logg},
+  category = {theses},
+  duplicate = {True},
+  owner = {logg},
+  school = {Chalmers University of Technology},
+  simula = {ok},
+  status = {published},
+  thesistype = {msc},
+  timestamp = {2009.06.06},
+  title = {A Multi-Adaptive {ODE}-Solver},
+  year = {1998}
+}
+
 @INBOOK{LoggLangtangenEtAl2009,
   chapter = {x},
   title = {Past and Future Perspectives on Scientific Software},
@@ -5279,6 +5506,15 @@
   owner = {logg},
   status = {accepted},
   timestamp = {2009.06.06}
+}
+
+@MISC{Logg2009a,
+  author = {A. Logg and K.-A. Mardal},
+  title = { {Exterior} },
+  howpublished = {URL: \url{http//www.fenics.org/hg/exterior}},
+  year = {2009},
+  owner = {kent-and},
+  timestamp = {2009.06.08}
 }
 
 @INBOOK{LoggMardalEtAl2007a,
@@ -5406,6 +5642,18 @@
   timestamp = {2009.05.27}
 }
 
+@ARTICLE{Loth2001,
+  author = {Loth, F. and Yardimci, M. A. and Alperin, N.},
+  title = {Hydrodynamic modeling of cerebrospinal fluid motion within the spinal
+	cavity},
+  journal = {J. Biomech. Eng.},
+  year = {2001},
+  volume = {123},
+  pages = {71-79},
+  owner = {kent-and},
+  timestamp = {2009.06.08}
+}
+
 @ARTICLE{LovadinaStenberg2006,
   author = {Lovadina, C. and Stenberg, R.},
   title = {{Energy norm a posteriori error estimates for mixed finite element
@@ -5521,6 +5769,17 @@
   publisher = {Springer},
   owner = {logg},
   timestamp = {2009.06.06}
+}
+
+@ARTICLE{Mardal2002,
+  author = {K.-A. Mardal and X.-C. Tai and R. Winther},
+  title = {A robust finite element method for {D}arcy--{S}tokes flow},
+  journal = {SIAM J. Num. Anal.},
+  year = {2002},
+  volume = {40},
+  pages = {1605--1631},
+  owner = {kent-and},
+  timestamp = {2009.06.08}
 }
 
 @INPROCEEDINGS{MardalZumbuschEtAl2003,
@@ -5670,6 +5929,30 @@
   file = {:MichelettiPerotto2005.pdf:PDF},
   owner = {massing},
   timestamp = {2009.05.07}
+}
+
+@ARTICLE{Milhorat2003,
+  author = {Milhorat, T. and Bolognese, P. A},
+  title = {Tailored operative technique for chiari Type I malformations using
+	intraoperative color doppler ultrasonography},
+  journal = {Neurosurgery},
+  year = {2003},
+  volume = {53},
+  pages = {899-906},
+  number = {4},
+  owner = {kent-and},
+  timestamp = {2009.06.08}
+}
+
+@MISC{Milhorat1999,
+  author = {Milhorat, T. and Chou, M. and Trinidad, E. and Kula, R. and Mandell,
+	M. and Wolpert, C. and Speer, M.},
+  title = {Chiari I Malformations Redefined: Clinical and Radiographic Findings
+	for 364 Sympomatic Patients},
+  year = {1999},
+  journal = {Congress of Neurological Surgeons},
+  owner = {kent-and},
+  timestamp = {2009.06.08}
 }
 
 @ARTICLE{Moore1995,
@@ -5901,6 +6184,31 @@
 }
 
 @ARTICLE{N'ed'elec1986,
+  author = {J.-C. N{\'e}d{\'e}lec},
+  title = {A new family of mixed finite elements in ${R}^3$},
+  journal = {Numer. Math.},
+  year = {1986},
+  volume = {50},
+  pages = {57--81},
+  number = {1},
+  month = nov,
+  acknowledgement = {#ack-nhfb#},
+  bibdate = {Mon May 26 11:49:34 MDT 1997},
+  classification = {B0290P (Differential equations); C4170 (Differential equations)},
+  coden = {NUMMA7},
+  corpsource = {Math. Appl., {\'E}cole Polytechn., Plaiseau, France},
+  issn = {0029-599X (print), 0945-3245 (electronic)},
+  keywords = {differential equations; finite element analysis; mixed finite elements;
+	Stoke system},
+  mrclass = {65N30},
+  mrnumber = {88e:65145},
+  mrreviewer = {Reinhard Scholz},
+  owner = {kent-and},
+  timestamp = {2009.06.08},
+  treatment = {T Theoretical or Mathematical}
+}
+
+@ARTICLE{Nedelec1986,
   author = {N{\'e}d{\'e}lec, J.-C.},
   title = {A new family of mixed finite elements in {${\bf R}\sp 3$}},
   journal = {Numer. Math.},
@@ -5918,7 +6226,7 @@
   timestamp = {2009.06.06}
 }
 
-@ARTICLE{N'ed'elec1980,
+@ARTICLE{Nedelec1980,
   author = {N{\'e}d{\'e}lec, J.-C.},
   title = {Mixed finite elements in {${\bf R}\sp{3}$}},
   journal = {Numer. Math.},
@@ -6028,6 +6336,19 @@
   simula = {ok},
   status = {published},
   timestamp = {2009.06.06}
+}
+
+@ARTICLE{Oldfield1994,
+  author = {Oldfield, E. H. and Muraszko, K. and Shawker, T. H. and Patronas,
+	N. J.},
+  title = {Pathophyiology of syringomyelia associated with Chiari I malformation
+	of the cerebellar tonsils},
+  journal = {Neurosurg.},
+  year = {1994},
+  volume = {80},
+  pages = {3-15},
+  owner = {kent-and},
+  timestamp = {2009.06.08}
 }
 
 @TECHREPORT{Oliker1998,
@@ -6163,6 +6484,19 @@
   key = {F2PY software package},
   owner = {logg},
   timestamp = {2009.06.06}
+}
+
+@ARTICLE{Pinna2000,
+  author = {Pinna, G. and Alessandrini, F. and Alfieri, A. and Rossi, M. and
+	Bricolo, A.},
+  title = {Cerebrospinal fluid flow dynamics study in {C}hiari {I} malformation:
+	implications for syrinx formation},
+  journal = {Neurosurg Focus 8},
+  year = {2000},
+  volume = {3},
+  number = {3},
+  owner = {kent-and},
+  timestamp = {2009.06.08}
 }
 
 @BOOK{Pope2000,
@@ -6321,7 +6655,7 @@
   timestamp = {2009.05.07}
 }
 
-@UNPUBLISHED{R.,
+@UNPUBLISHED{www:tnt,
   author = {{R. Pozo}},
   title = {{TNT} software package},
   note = {\url{http://math.nist.gov/tnt/}},
@@ -6357,7 +6691,7 @@
 	accumulate in bursts of calcium blips that may be central for the
 	understanding of cellular calcium dynamics.},
   doi = {10.1529/biophysj.106.099879},
-  file = {Ruedi_2007_1847.pdf:Ruedi_2007_1847.pdf:PDF},
+  file = {Ruedi_2007_1847.pdf:Ruedi_2007_1847.pdf:PDF;Ruedi_2007_1847.pdf:Ruedi_2007_1847.pdf:PDF},
   institution = {Institut für Physik, Humboldt-Universität zu Berlin, Berlin, Germany.
 	sten.ruediger@gmail.com},
   keywords = {Algorithms; Biophysics; Calcium Signaling, physiology; Computer Simulation;
@@ -6365,11 +6699,21 @@
 	physiology; Models, Biological; Patch-Clamp Techniques; Stochastic
 	Processes},
   owner = {logg},
-  pdf = {Ruedi_2007_1847.pdf},
   pii = {biophysj.106.099879},
   pmid = {17496042},
   timestamp = {2008.09.03},
   url = {http://dx.doi.org/10.1529/biophysj.106.099879}
+}
+
+@ARTICLE{Rannacher1992,
+  author = { R. Rannacher and S. Turek },
+  title = { A simple nonconforming quadrilateral Stokes element},
+  journal = { Numer. Meth. Parth. Diff. Equ.},
+  year = { 1992},
+  volume = { 8 },
+  pages = { 97--111},
+  owner = {kent-and},
+  timestamp = {2009.06.08}
 }
 
 @INCOLLECTION{RaviartThomas1977,
@@ -6495,6 +6839,18 @@
   timestamp = {2009.06.06}
 }
 
+@ARTICLE{Roldan2008,
+  author = {Roldan, A. and Haughton, V. and Wieben, O. and Osswald, T. and Chesler,
+	N.},
+  title = {Characterization of complex {CSF} hydrodynamics at the cranio-vertebral
+	junction with computational flow analysis: {H}ealthy and {C}hiari
+	{I} malformation},
+  journal = {Submitted to Am. J. Neuroradiol.},
+  year = {2008},
+  owner = {kent-and},
+  timestamp = {2009.06.08}
+}
+
 @BOOK{RoosStynesEtAl2008,
   title = {{Numerical methods for singularly perturbed differential equations:
 	convection-diffusion and flow problems}},
@@ -6604,6 +6960,14 @@
   number = {MAS--E0516},
   owner = {logg},
   timestamp = {2009.06.06}
+}
+
+@MISC{Schoberl,
+  author = {Sch\"{o}berl, J. and Gerstmayr, H. and Gaisbauer, R.},
+  title = {NetGen - a 3D mesh generator},
+  location = {http://www.hpfem.jku.at/netgen/},
+  owner = {kent-and},
+  timestamp = {2009.06.08}
 }
 
 @ARTICLE{SchloegelKarypisEtAl1997,
@@ -6795,6 +7159,17 @@
   timestamp = {2009.06.06}
 }
 
+@ARTICLE{Smith2006,
+  author = {Smith, B. W. and Chase2, G. J. and Shaw, G. M. and Nokes, R. I.},
+  title = {Simulating transient ventricular interaction using a minimal cardiovascular
+	system model},
+  journal = {Physiological Measurement},
+  year = {2006},
+  pages = {165-179},
+  owner = {kent-and},
+  timestamp = {2009.06.08}
+}
+
 @ARTICLE{SoellerCannell1999,
   author = {C. Soeller and M. B. Cannell},
   title = {Examination of the transverse tubular system in living cardiac rat
@@ -6903,7 +7278,7 @@
 	from an effective "volume expansion" of the diad space. Furthermore,
 	the layer of increased [{C}a$^{2+}$] close to the sarcolemmal membrane
 	can act as a fast buffer.},
-  file = {Soel_1997_97.pdf:Soel_1997_97.pdf:PDF},
+  file = {Soel_1997_97.pdf:Soel_1997_97.pdf:PDF;Soel_1997_97.pdf:Soel_1997_97.pdf:PDF},
   key = {5},
   keywords = {Binding Sites, Calcium, Calcium Channels, Cardiovascular, Cell Membrane,
 	Computer Simulation, Cytosol, Heart, Ion Channel Gating, Ion Transport,
@@ -6912,7 +7287,6 @@
 	Channel, Sarcolemma, Sarcoplasmic Reticulum, Signal Transduction,
 	Structural, Time Factors, 9199775},
   owner = {logg},
-  pdf = {Soel_1997_97.pdf},
   timestamp = {2009.06.07},
   url = {http://www.pubmedcentral.gov/articlerender.fcgi?tool=pubmed&pubmedid=9199775}
 }
@@ -6966,7 +7340,7 @@
 	RyRs. Such allosteric coupling between RyRs may be a function of
 	the foot process and lattice array, explaining their conservation
 	during evolution.},
-  file = {Ster_1999_469.pdf:Ster_1999_469.pdf:PDF},
+  file = {Ster_1999_469.pdf:Ster_1999_469.pdf:PDF;Ster_1999_469.pdf:Ster_1999_469.pdf:PDF},
   institution = {Laboratory of Cardiovascular Science, National Institute on Aging,
 	National Institutes of Health, Baltimore, Maryland 21224, USA. sternM@grc.nia.nih.gov},
   keywords = {Algorithms; Animals; Calcium Channels, L-Type; Calcium Channels, physiology;
@@ -6976,7 +7350,6 @@
 	Rats; Ryanodine Receptor Calcium Release Channel, physiology; Sarcoplasmic
 	Reticulum, metabolism},
   owner = {logg},
-  pdf = {Ster_1999_469.pdf},
   pmid = {10051521},
   timestamp = {2008.09.04},
   url = {http://www.jgp.org/cgi/content/abstract/113/3/469}
@@ -7080,6 +7453,17 @@
   url = {http://comjnl.oxfordjournals.org/cgi/content/abstract/51/6/688}
 }
 
+@ARTICLE{Tai2006,
+  author = {X.-C. Tai and R. Winther},
+  title = {A discrete de {R}ham complex with enhanced smoothness},
+  journal = {Calcolo},
+  year = {2006},
+  volume = {43},
+  pages = {287-306},
+  owner = {kent-and},
+  timestamp = {2009.06.08}
+}
+
 @ARTICLE{TanakaKashiyama2006,
   author = {Tanaka, S. and Kashiyama, K.},
   title = {{ALE finite element method for FSI problems with free surface using
@@ -7131,13 +7515,21 @@
 	to RyR2 binding sites, thus increasing excitation-contraction coupling
 	gain.},
   doi = {10.1529/biophysj.106.089425},
-  file = {Tans_2007_3379.pdf:Tans_2007_3379.pdf:PDF},
+  file = {Tans_2007_3379.pdf:Tans_2007_3379.pdf:PDF;Tans_2007_3379.pdf:Tans_2007_3379.pdf:PDF},
   owner = {logg},
-  pdf = {Tans_2007_3379.pdf},
   pii = {biophysj.106.089425},
   pmid = {17325016},
   timestamp = {2007.06.18},
   url = {http://dx.doi.org/10.1529/biophysj.106.089425}
+}
+
+@BOOK{Turek1999,
+  title = {Efficient Solvers for Incompressible Flow Problems},
+  publisher = {Springer},
+  year = {1999},
+  author = {S. Turek},
+  owner = {kent-and},
+  timestamp = {2009.06.08}
 }
 
 @INPROCEEDINGS{Veldhuizen1999,
@@ -7428,6 +7820,30 @@
   timestamp = {2009.06.07}
 }
 
+@INPROCEEDINGS{WilbersLangtangenEtAl2009a,
+  author = {Wilbers, Ilmar and Langtangen, Hans Petter and {\O}degard, {\r A}smund},
+  title = {Using Cython to Speed up Numerical Python Programs},
+  booktitle = {Proceedings of MekIT'09},
+  year = {2009},
+  editor = {B. Skallerud and H. I. Andersson},
+  pages = {495-512},
+  organization = {NTNU},
+  publisher = {Tapir},
+  abstract = {The present study addresses a series of techniques for speeding up
+	numerical calculations in Python programs. The techniques are evaluated
+	in a benchmark problem involving finite difference solution of a
+	wave equation. Our aim is to find the optimal mix of user-friendly,
+	high-level, and safe programming in Python with more detailed and
+	more error-prone low-level programming in compiled languages. In
+	particular, we present and evaluate Cython, which is a new software
+	tool that combines high- and low-level programming in an attractive
+	way with promising performance. Cython is compared to more well-known
+	tools such as F2PY, Weave, and Instant. With the mentioned tools,
+	Python has a significant potential as programming platform in computational
+	mechanics.},
+  isbn = {978-82-519-2421-4}
+}
+
 @ARTICLE{WohlmuthHoppe1999,
   author = {Wohlmuth, B.I. and Hoppe, R.H.W.},
   title = {{A comparison of a posteriori error estimators for mixed finite element
@@ -7646,159 +8062,7 @@
   timestamp = {2009.06.07}
 }
 
-@UNPUBLISHED{,
-  title = {{DUNE: Distributed and Unified Numerics Environment}},
-  note = {\url{http://www.dune-project.org}},
-  key = {DUNE},
-  owner = {logg},
-  timestamp = {2009.06.06}
-}
-
-@UNPUBLISHED{,
-  title = {{uBLAS} software package},
-  note = {\url{http://www.boost.org/libs/numeric/ublas/doc/}},
-  key = {{uBLAS}},
-  owner = {logg},
-  timestamp = {2009.06.06}
-}
-
-@UNPUBLISHED{,
-  title = {{Trilinos} software package},
-  note = {\url{http://trilinos.sandia.gov/}},
-  key = {{Trilinos}},
-  owner = {logg},
-  timestamp = {2009.06.06}
-}
-
-@UNPUBLISHED{,
-  title = {{Hypre} software package},
-  note = {\url{http://www.llnl.gov/CASC/hypre/}},
-  key = {{Hypre}},
-  owner = {logg},
-  timestamp = {2009.06.06}
-}
-
-@UNPUBLISHED{,
-  title = {{PETSc} software package},
-  note = {\url{http://www.anl.gov/petsc}},
-  key = {{PETSc} software package},
-  owner = {logg},
-  timestamp = {2009.06.06}
-}
-
-@UNPUBLISHED{,
-  title = {{Object-Oriented Numerics}},
-  note = {\url{http://www.oonumerics.org/}},
-  key = {{Object-Oriented Numerics}},
-  owner = {logg},
-  timestamp = {2009.06.06}
-}
-
-@UNPUBLISHED{,
-  title = {Netlib repository of numerical software},
-  note = {\url{http://www.netlib.org}},
-  key = {Netlib repository of numerical software},
-  owner = {logg},
-  timestamp = {2009.06.06}
-}
-
-@UNPUBLISHED{,
-  title = {Vtk software software package},
-  note = {\url{http://www.kitware.com}},
-  key = {Vtk software package},
-  owner = {logg},
-  timestamp = {2009.06.06}
-}
-
-@UNPUBLISHED{,
-  title = {Python programming language},
-  note = {\url{http://www.python.org}},
-  key = {Python programming language},
-  owner = {logg},
-  timestamp = {2009.06.06}
-}
-
-@UNPUBLISHED{,
-  title = {{ScientificPython} software package},
-  note = {\url{http://starship.python.net/crew/hinsen}},
-  key = {ScientificPython software package},
-  owner = {logg},
-  timestamp = {2009.06.06}
-}
-
-@UNPUBLISHED{,
-  title = {Numerical {Python} software package},
-  note = {\url{http://sourceforge.net/projects/numpy}},
-  key = {Numerical Python software package},
-  owner = {logg},
-  timestamp = {2009.06.06}
-}
-
-@UNPUBLISHED{,
-  title = {{SciPy} software package},
-  note = {\url{http://www.scipy.org}},
-  key = {{SciPy} software package},
-  owner = {logg},
-  timestamp = {2009.06.06}
-}
-
-@UNPUBLISHED{,
-  title = {{FEniCS} software collection},
-  note = {\url{http://www.fenics.org}},
-  key = {{FEniCS}},
-  owner = {logg},
-  timestamp = {2009.06.06}
-}
-
-@UNPUBLISHED{,
-  title = {PyMat {Python-Matlab} interface},
-  note = {\url{http://claymore.engineer.gvsu.edu/~steriana/Python}},
-  key = {PyMat {Python-Matlab} interface},
-  owner = {logg},
-  timestamp = {2009.06.06}
-}
-
-@UNPUBLISHED{,
-  title = {{SWIG} software package},
-  note = {\url{http://www.swig.org}},
-  key = {SWIG software package},
-  owner = {logg},
-  timestamp = {2009.06.06}
-}
-
-@UNPUBLISHED{,
-  title = {{FEATFLOW} software package},
-  note = {\url{http://www.featflow.de}},
-  key = {{FEATFLOW} software package},
-  owner = {logg},
-  timestamp = {2009.06.06}
-}
-
-@UNPUBLISHED{,
-  title = {{Mouse} software package},
-  note = {\url{http://fire8.vug.uni-duisburg.de/MOUSE/}},
-  key = {{Mouse} software package},
-  owner = {logg},
-  timestamp = {2009.06.06}
-}
-
-@UNPUBLISHED{,
-  title = {{UG} software package},
-  note = {\url{http://cox.iwr.uni-heidelberg.de/~ug/}},
-  key = {{UG} software package},
-  owner = {logg},
-  timestamp = {2009.06.06}
-}
-
-@UNPUBLISHED{,
-  title = {{OpenFOAM} software package},
-  note = {\url{http://www.nabla.co.uk}},
-  key = {{OpenFOAM} software package},
-  owner = {logg},
-  timestamp = {2009.06.06}
-}
-
-@UNPUBLISHED{,
+@UNPUBLISHED{www:diffpack,
   title = {Diffpack software package},
   note = {\url{http://www.diffpack.com}},
   key = {Diffpack software package},
@@ -7806,7 +8070,160 @@
   timestamp = {2009.06.06}
 }
 
-@UNPUBLISHED{2008,
+@UNPUBLISHED{www:dune,
+  title = {{DUNE: Distributed and Unified Numerics Environment}},
+  note = {\url{http://www.dune-project.org}},
+  key = {DUNE},
+  owner = {logg},
+  timestamp = {2009.06.06}
+}
+
+@UNPUBLISHED{www:featflow,
+  title = {{FEATFLOW} software package},
+  note = {\url{http://www.featflow.de}},
+  key = {{FEATFLOW} software package},
+  owner = {logg},
+  timestamp = {2009.06.06}
+}
+
+@UNPUBLISHED{www:fenics,
+  title = {{FEniCS} software collection},
+  note = {\url{http://www.fenics.org}},
+  key = {{FEniCS}},
+  owner = {logg},
+  timestamp = {2009.06.06}
+}
+
+@UNPUBLISHED{www:hypre,
+  title = {{Hypre} software package},
+  note = {\url{http://www.llnl.gov/CASC/hypre/}},
+  key = {{Hypre}},
+  owner = {logg},
+  timestamp = {2009.06.06}
+}
+
+@UNPUBLISHED{www:mouse,
+  title = {{Mouse} software package},
+  note = {\url{http://fire8.vug.uni-duisburg.de/MOUSE/}},
+  key = {{Mouse} software package},
+  owner = {logg},
+  timestamp = {2009.06.06}
+}
+
+@UNPUBLISHED{www:netlib,
+  title = {Netlib repository of numerical software},
+  note = {\url{http://www.netlib.org}},
+  key = {Netlib repository of numerical software},
+  owner = {logg},
+  timestamp = {2009.06.06}
+}
+
+@UNPUBLISHED{www:numpy,
+  title = {Numerical {Python} software package},
+  note = {\url{http://sourceforge.net/projects/numpy}},
+  key = {Numerical Python software package},
+  owner = {logg},
+  timestamp = {2009.06.06}
+}
+
+@UNPUBLISHED{www:oonumerics,
+  title = {{Object-Oriented Numerics}},
+  note = {\url{http://www.oonumerics.org/}},
+  key = {{Object-Oriented Numerics}},
+  owner = {logg},
+  timestamp = {2009.06.06}
+}
+
+@UNPUBLISHED{www:openfoam,
+  title = {{OpenFOAM} software package},
+  note = {\url{http://www.nabla.co.uk}},
+  key = {{OpenFOAM} software package},
+  owner = {logg},
+  timestamp = {2009.06.06}
+}
+
+@UNPUBLISHED{www:petsc,
+  title = {{PETSc} software package},
+  note = {\url{http://www.anl.gov/petsc}},
+  key = {{PETSc} software package},
+  owner = {logg},
+  timestamp = {2009.06.06}
+}
+
+@UNPUBLISHED{www:pymat,
+  title = {PyMat {Python-Matlab} interface},
+  note = {\url{http://claymore.engineer.gvsu.edu/~steriana/Python}},
+  key = {PyMat {Python-Matlab} interface},
+  owner = {logg},
+  timestamp = {2009.06.06}
+}
+
+@UNPUBLISHED{www:python,
+  title = {Python programming language},
+  note = {\url{http://www.python.org}},
+  key = {Python programming language},
+  owner = {logg},
+  timestamp = {2009.06.06}
+}
+
+@UNPUBLISHED{www:scipy,
+  title = {{SciPy} software package},
+  note = {\url{http://www.scipy.org}},
+  key = {{SciPy} software package},
+  owner = {logg},
+  timestamp = {2009.06.06}
+}
+
+@UNPUBLISHED{www:swig,
+  title = {{SWIG} software package},
+  note = {\url{http://www.swig.org}},
+  key = {SWIG software package},
+  owner = {logg},
+  timestamp = {2009.06.06}
+}
+
+@UNPUBLISHED{www:trilinos,
+  title = {{Trilinos} software package},
+  note = {\url{http://trilinos.sandia.gov/}},
+  key = {{Trilinos}},
+  owner = {logg},
+  timestamp = {2009.06.06}
+}
+
+@UNPUBLISHED{www:ublas,
+  title = {{uBLAS} software package},
+  note = {\url{http://www.boost.org/libs/numeric/ublas/doc/}},
+  key = {{uBLAS}},
+  owner = {logg},
+  timestamp = {2009.06.06}
+}
+
+@UNPUBLISHED{www:ug,
+  title = {{UG} software package},
+  note = {\url{http://cox.iwr.uni-heidelberg.de/~ug/}},
+  key = {{UG} software package},
+  owner = {logg},
+  timestamp = {2009.06.06}
+}
+
+@UNPUBLISHED{www:vtk,
+  title = {Vtk software software package},
+  note = {\url{http://www.kitware.com}},
+  key = {Vtk software package},
+  owner = {logg},
+  timestamp = {2009.06.06}
+}
+
+@OTHER{www:openmp,
+  key = {OpenMP Application Program Interface},
+  note = {URL: \url{http://openmp.org}},
+  owner = {kent-and},
+  timestamp = {2009.06.08},
+  title = {{OpenMP} {A}pplication {P}rogram {I}nterface},
+  year = {2009}
+}
+
+@UNPUBLISHED{www:top500,
   title = {Top500 Supercomputing Sites},
   note = {\url{http://www.top500.org}},
   month = {November},
